fixed text-overflowing

--- a/apps/frontend/app/itinerary-items/modal.css
+++ b/apps/frontend/app/itinerary-items/modal.css
@@ -73,9 +73,11 @@
   min-width: 30vw;
   max-height: 70vh;
   max-width: 30vw;
+  text-overflow: clip;
   width: max-content;
   height: max-content;
   background-color: rgba(255, 255, 255, 0.5);
+  overflow: hidden;
   /* backdrop-filter: blur(20px); */
 }
 
